--- a/progress.html
+++ b/progress.html
@@ -6,6 +6,8 @@
 
 	<link rel="stylesheet" href="stylesheets/ui.css">
 	<link rel="stylesheet" href="stylesheets/ui.progress-bar.css">
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="progress.js" type="text/javascript" charset="utf-8"></script>
 </head>
 <body>
 	<div id="container">
